# 100-days-of-ai-engineering

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
coursesmith/: __init__.py  app.py  composition.py  hello.py  settings.py
coursesmith/config/: logging_config.py
coursesmith/infrastructure/shared/adapters/: lite_llm_adapter.py  prompts_adapter.py
coursesmith/infrastructure/shared/observability/: usage_tracker.py
coursesmith/infrastructure/shared/utils/: usage_tracker.py
coursesmith/use_cases/create_course_outline/: course_outline_service.py
coursesmith/use_cases/create_course_outline/models/: course_outline.py
coursesmith/use_cases/create_course_outline/tools/: __init__.py  create_daily_outline_tool.py  create_daily_quiz_tool.py  create_schedule_tool.py  create_title_tool.py  get_current_time_tool.py  review_course_tool.py
coursesmith/use_cases/shared/agents/: agent.py  agent_tool.py
coursesmith/use_cases/shared/ports/: llm_port.py  prompts_port.py
docs/: day_001.md  day_002.md  day_003.md  day_004.md  day_005.md  day_006.md  day_007.md  day_008.md  day_009.md  day_010.md  day_011.md  day_012.md  day_013.md  day_014.md  day_015.md  day_016.md  day_017.md  index.md
resources/prompts/course_outline/: v1.prompt.txt  v2.prompt.txt  v3.prompt.txt
resources/prompts/course_schedule/: v1.prompt.txt  v2.prompt.txt
resources/prompts/course_title/: v1.prompt.txt
resources/prompts/create_daily_outline/: v1.prompt.txt
resources/prompts/create_daily_quiz/: v1.prompt.txt
resources/prompts/review_course/: v1.prompt.txt
tests/infrastructure/shared/adapters/: test_lite_llm_adapter.py  test_prompts_adapter.py
tests/integration/: test_create_course_outline_endpoint.py
(+11 files in other folders)
